# aussensensor

./: .ai-context.yml  .env.example  .gitignore  .gitmodules  .hauski-reports  .pre-commit-config.yaml  README.md  RELEASE_NOTES.md  package-lock.json  package.json  push.err  sichter-reports
.github/workflows/: ai-context-guard.yml  ci.yml  contracts-drift.yml  contracts-validate.yml  fixtures-validate.yml  (+12 more)
.wgx/: flows.json  profile.yml
contracts/: aussen.event.schema.json
docs/: evaluation.md  runbook.md
export/: feed.jsonl
heimgewebe-.ai-context.yml-sammlung/: chronik.ai-context.yml
merges/: aussensensor_merge_2510262237__contracts.md  aussensensor_merge_2510262237__export.md  aussensensor_merge_2510262237__index.md  aussensensor_merge_2510262238__.github_workflows.md  aussensensor_merge_2510262238__docs.md  aussensensor_merge_2510262238__docs_adr.md  aussensensor_merge_2510262238__index.md  aussensensor_merge_2510262238__merges.md  aussensensor_merge_2510262238__root.md  aussensensor_merge_2510262238__scripts.md  aussensensor_merge_2510262238__tests_fixtures_aussen.md
scripts/: append-feed.sh  jsonl-compact.sh  push_chronik.sh  push_heimlern.sh  push_leitstand.sh  utils.sh  validate-fixtures.sh  validate.sh  validate_stream.js  wgx-metrics-snapshot.sh
tests/: run.sh  test_append-feed.bats  test_append_feed_fixes.bats  test_branding.bats  test_bugs.bats  test_push_chronik_security.bats  test_validate.bats  test_validate_ref.bats  test_validate_security.js
tools/aussensensor-push/: Cargo.toml  README.md
tools/aussensensor-push/src/: main.rs
wgx/: wgx
(+19 files in other folders)
