[package]
name = "aussensensor-push"
version = "0.1.0"
edition = "2021"
description = "Send NDJSON to leitstand /v1/ingest"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = true, features = ["blocking", "json"] }
anyhow = "1"
